# nagisaki-soyo-cli

./: .env.example  .gitignore  .gitmodules  README.md  pyproject.toml
sql/: mysql_llm_health.sql  mysql_raw_corpus.sql  mysql_user_profiles.sql  mysql_xhs_crawler_import.sql
src/nagisaki_soyo_cli/: chatbot.py  cli.py  config.py  demo_persona_chat.py  llm_health.py  mysql_persona_source.py  mysql_profile_source.py  mysql_profile_store.py  profile_analysis.py  profile_prompts.py  prompts.py
