[project]
name = "nagisaki-soyo-cli"
version = "0.1.0"
description = "LangChain-based command-line chatbot with a gentle Soyo persona"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "langchain>=1.3.11",
    "langchain-openai>=1.3.3",
    "openai>=2.43.0",
    "python-dotenv>=1.2.2",
]

[project.scripts]
nagisaki-soyo-cli = "nagisaki_soyo_cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
